--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div><span class="text-2xl font-black text-slate-800 font-en">30°</span><div class="text-[10px] text-slate-400">體感 34°</div></div>
             </div>
             <div class="text-right">
-                <div class="text-[10px] text-teal-600 bg-teal-50 px-2 py-0.5 rounded font-bold mb-1 uppercase">Today's Highlight</div>
+                <div class="text-[10px] text-teal-600 bg-teal-50 px-2 py-0.5 rounded font-bold mb-1 uppercase">Today's Goal</div>
                 <div class="text-sm font-bold text-slate-700">{{ tripDays[currentDateIndex].highlight }}</div>
             </div>
         </div>
@@ -88,16 +88,18 @@
                     <div class="flex-1 min-w-0">
                         <div class="flex items-center gap-2 mb-1">
                             <span class="text-[10px] font-bold px-2 py-0.5 rounded border" :class="getCategoryBadgeStyle(event.type)">{{ getCategoryName(event.type) }}</span>
-                            <span v-if="event.transportTime" class="text-[10px] text-slate-400 bg-slate-100 px-2 py-0.5 rounded flex items-center"><i data-lucide="footprints" class="w-3 h-3 mr-1"></i>{{ event.transportTime }}</span>
+                            <span v-if="event.tag" class="text-[10px] bg-yellow-100 text-yellow-700 px-2 py-0.5 rounded font-bold">{{ event.tag }}</span>
                         </div>
                         <h3 class="text-base font-black text-slate-800 leading-tight truncate pr-1">{{ event.title }}</h3>
                         <p class="text-xs text-slate-400 mt-1 truncate"><i data-lucide="map-pin" class="w-3 h-3 inline mr-1 text-teal-500"></i>{{ event.locationName }}</p>
                     </div>
                     <button class="w-8 h-8 rounded-full bg-blue-50 text-blue-500 flex items-center justify-center"><i data-lucide="navigation" class="w-4 h-4"></i></button>
                 </div>
-                <div v-if="event.note || event.tag" class="mt-3 pt-3 border-t flex flex-wrap gap-2">
+                <div v-if="event.note || event.transportTime" class="mt-3 pt-3 border-t flex flex-wrap gap-2">
+                    <div v-if="event.transportTime" class="text-[10px] text-slate-400 bg-slate-50 px-2 py-1 rounded flex items-center w-full mb-1">
+                        <i data-lucide="footprints" class="w-3 h-3 mr-1"></i> {{ event.transportTime }}
+                    </div>
                     <div v-if="event.note" class="bg-slate-50 rounded-lg px-2 py-1 text-xs flex-1 leading-relaxed">{{ event.note }}</div>
-                    <span v-if="event.tag" class="text-[10px] bg-yellow-100 text-yellow-700 px-2 py-1 rounded-lg font-bold flex items-center"><i data-lucide="star" class="w-3 h-3 mr-1 fill-yellow-700"></i>{{ event.tag }}</span>
                 </div>
             </div>
         </div>
@@ -115,13 +117,6 @@
                 <h3 class="font-bold mb-3 flex items-center"><i data-lucide="coins" class="w-5 h-5 mr-2"></i> PHP 匯率換算 (0.56)</h3>
                 <input type="number" v-model="calcPHP" class="bg-white/20 rounded-xl p-3 w-full text-xl font-bold outline-none text-white placeholder-white/50" placeholder="PHP">
                 <div class="mt-3 text-2xl font-black">≈ NT$ {{ Math.round(calcPHP * 0.56) }}</div>
-            </div>
-            <div class="bg-white border rounded-2xl p-4 shadow-sm">
-                <h3 class="font-bold text-slate-800 mb-2 flex items-center"><i data-lucide="plane" class="w-5 h-5 mr-2 text-blue-500"></i> 航班資訊</h3>
-                <div class="text-sm space-y-1">
-                    <p class="flex justify-between"><span>2/11 5J311</span> <span>03:15 TPE</span></p>
-                    <p class="flex justify-between"><span>2/18 5J310</span> <span>23:35 MNL</span></p>
-                </div>
             </div>
         </div>
     </div>
@@ -150,7 +145,7 @@
 
     createApp({
         setup() {
-            const STORAGE_KEY = 'remi_trip_v55_data';
+            const STORAGE_KEY = 'remi_trip_v56_data';
             const currentDateIndex = ref(0);
             const activePopup = ref(null);
             const showEventModal = ref(false);
@@ -169,15 +164,40 @@
             ];
 
             const initialItinerary = [
+                // Day 1
                 { id: '1-0', date: '2026-02-11', time: '03:15', title: '飛往馬尼拉 5J311', locationName: 'TPE T1 -> MNL T3', type: 'transport', tag: '轉機', note: '轉機需領行李，重掛。', address: 'Ninoy Aquino International Airport Terminal 3' },
-                { id: '1-4', date: '2026-02-11', time: '13:00', title: '飯店 Check-in', locationName: '宿務派克蘭大飯店', type: 'hotel', note: '寄放行李、稍作休息', address: 'Cebu Parklane International Hotel' },
+                { id: '1-1', date: '2026-02-11', time: '05:45', title: '抵達馬尼拉 T3', locationName: 'MNL T3', type: 'note', tag: '領行李', address: 'Ninoy Aquino International Airport Terminal 3' },
+                { id: '1-2', date: '2026-02-11', time: '12:00', title: '抵達宿霧 & Grab', locationName: 'Mactan Airport', type: 'transport', tag: '叫車', address: 'Mactan-Cebu International Airport' },
+                { id: '1-4', date: '2026-02-11', time: '13:00', title: '飯店 Check-in', locationName: '宿務派克蘭國際大飯店', type: 'hotel', transportTime: '30 min', note: '寄放行李、稍作休息', address: 'Cebu Parklane International Hotel' },
                 { id: '1-5', date: '2026-02-11', time: '14:00', title: '換匯 & Ayala', locationName: 'Ayala Center Cebu', type: 'activity', tag: '匯率佳', address: 'Ayala Center Cebu' },
-                { id: '1-6', date: '2026-02-11', time: '15:00', title: '午餐 House of Lechon', locationName: 'House of Lechon', type: 'food', tag: '推薦', address: 'House of Lechon, Cebu' },
-                { id: '1-7', date: '2026-02-11', time: '18:00', title: '夜市 Sugbo Mercado', locationName: 'IT Park', type: 'food', tag: '晚餐', note: '當地人氣夜市', address: 'Sugbo Mercado' },
-                { id: '2-1', date: '2026-02-12', time: '09:00', title: 'Cebu Ocean Park', locationName: '海洋公園', type: 'spot', note: '適合小孩', address: 'Cebu Ocean Park' },
-                { id: '3-2', date: '2026-02-13', time: '11:40', title: '搭船 Ocean Jet', locationName: '前往薄荷島', type: 'transport', tag: 'KKDay票', address: 'Cebu Port Pier 1' },
+                { id: '1-6', date: '2026-02-11', time: '15:00', title: '午餐 House of Lechon', locationName: 'House of Lechon', type: 'food', tag: '推薦', note: '烤乳豬', address: 'House of Lechon, Cebu' },
+                { id: '1-7', date: '2026-02-11', time: '18:00', title: '夜市 Sugbo Mercado', locationName: 'IT Park', type: 'food', tag: '晚餐', note: '人氣夜市', address: 'Sugbo Mercado' },
+                // Day 2
+                { id: '2-1', date: '2026-02-12', time: '09:00', title: 'Cebu Ocean Park', locationName: '海洋公園', type: 'spot', note: '溜小孩', address: 'Cebu Ocean Park' },
+                { id: '2-3', date: '2026-02-12', time: '11:00', title: '午餐 Aqua Dining', locationName: 'Aqua Dining', type: 'food', tag: '需預約', address: 'Aqua Dining' },
+                { id: '2-5', date: '2026-02-12', time: '13:00', title: '古蹟巡禮', locationName: '麥哲倫十字架', type: 'spot', address: 'Magellan\'s Cross Pavilion' },
+                { id: '2-8', date: '2026-02-12', time: '18:00', title: '晚餐 KKD STK + BBQ', locationName: 'KKD', type: 'food', tag: '推薦', address: 'KKD STK + BBQ' },
+                // Day 3
+                { id: '3-1', date: '2026-02-13', time: '10:40', title: '港口 Pier 1', locationName: 'Cebu Pier 1', type: 'note', tag: '買午餐', address: 'Cebu Port Pier 1' },
+                { id: '3-2', date: '2026-02-13', time: '11:40', title: '搭船 Ocean Jet', locationName: '前往薄荷島', type: 'transport', tag: 'KKDay', address: 'Cebu Port Pier 1' },
                 { id: '3-3', date: '2026-02-13', time: '14:00', title: '抵達 Tagbilaran', locationName: '港口', type: 'transport', tag: '包車1200p', address: 'Tagbilaran Seaport' },
-                { id: '6-4', date: '2026-02-16', time: '14:00', title: '巧克力山', locationName: '巧克力山 Complex', type: 'spot', address: 'Chocolate Hills Complex' },
+                { id: '3-4', date: '2026-02-13', time: '15:00', title: '入住飯店', locationName: 'Best Western Plus', type: 'hotel', note: 'Alona Beach 鬧區', address: 'Best Western Plus The Ivywall Resort-Panglao' },
+                // Day 4
+                { id: '4-1', date: '2026-02-14', time: '09:00', title: 'Napaling Reef', locationName: 'Napaling', type: 'spot', address: 'Napaling Reef' },
+                { id: '4-2', date: '2026-02-14', time: '11:00', title: 'Hinagdanan Cave', locationName: '鐘乳石洞', type: 'spot', address: 'Hinagdanan Cave' },
+                { id: '4-3', date: '2026-02-14', time: '12:00', title: '午餐 Ubeco', locationName: 'Ubeco', type: 'food', tag: '指定', address: 'Ubeco' },
+                // Day 5
+                { id: '5-0', date: '2026-02-15', time: '06:00', title: '跳島：巴里卡薩島', locationName: 'Balicasag', type: 'spot', tag: '包船', address: 'Balicasag Island' },
+                { id: '5-4', date: '2026-02-15', time: '14:30', title: '入住 Villa', locationName: 'Villa Kalachuchi', type: 'hotel', note: '無早餐有廚房', address: 'Villa Kalachuchi V.K Resort' },
+                // Day 6
+                { id: '6-2', date: '2026-02-16', time: '10:00', title: '眼鏡猴保護區', locationName: 'Bohol', type: 'spot', address: 'Bohol Tarsier Conservation Area' },
+                { id: '6-4', date: '2026-02-16', time: '14:00', title: '巧克力山', locationName: '巧克力山', type: 'spot', address: 'Chocolate Hills Complex' },
+                // Day 7
+                { id: '7-1', date: '2026-02-17', time: '11:00', title: 'South Farm', locationName: 'South Farm', type: 'spot', address: 'South Farm Panglao' },
+                { id: '7-5', date: '2026-02-17', time: '18:20', title: '飛往馬尼拉 5J616', locationName: 'TAG -> MNL', type: 'transport', address: 'Bohol-Panglao International Airport' },
+                // Day 8
+                { id: '8-1', date: '2026-02-18', time: '10:00', title: 'Mind Museum', locationName: 'BGC', type: 'spot', address: 'The Mind Museum' },
+                { id: '8-2', date: '2026-02-18', time: '12:00', title: '午餐 Mamou Meats', locationName: 'Mamou Uptown', type: 'food', address: 'Mamou - A Home Kitchen (Uptown)' },
                 { id: '8-4', date: '2026-02-18', time: '23:35', title: '返台 5J310', locationName: 'MNL -> TPE', type: 'transport', address: 'Ninoy Aquino Airport' }
             ];
 
